samples/_failures_safe/1761197031_e3147b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e8da2a08.c:167: error: expected ‘;’, ‘,’ or ‘)’ at end of input
